--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -22,8 +22,7 @@ ja:
       project:
         content: "名前"
       user:
-        title: "タイトル"
-        name: "名前"
+        email: "メールアドレス"
         current_password: "現在のパスワード"
         password: "パスワード"
         password_confirmation: "確認用パスワード"
